apps/adguardhome/components/tailscale/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adguardhome
  namespace: shikanime
  annotations:
    tailscale.com/tags: tag:web
spec:
  ingressClassName: tailscale
